WebShop.API/src/main/java/com/example/webshopapi/error/exception/InvalidProductException.java
package com.example.webshopapi.error.exception;

public class InvalidProductException extends RuntimeException{
    public InvalidProductException(String message){
        super(message);
    }
}
